--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,14 @@
+
 @tailwind base;
+
+@layer base {
+    h1 {
+        @apply font-light text-3xl p-2 text-md-green;
+    }
+    h2 {
+        @apply text-2xl font-bold p-2 text-md-green;
+    }
+}
+
 @tailwind components;
 @tailwind utilities;
